@@ -536,6 +536,8 @@ void DocumentClass::contextMenuEvent(QContextMenuEvent *event)
 	menu.addAction(menuactions.at(COPYMENUITEM-UNDOMENUITEM));
 	menu.addAction(menuactions.at(PASTEMENUITEM-UNDOMENUITEM));
 	menu.addSeparator();
+	menu.addAction(menuactions.at(SELECTALLMENUITEM-UNDOMENUITEM));
+	menu.addSeparator();
 
 	menuactions=qobject_cast<QMenu*>(this->mainKKEditClass->navMenu)->actions();
 
